--- a/app/src/main/res/layout/add_contact_friendship_request_received.xml
+++ b/app/src/main/res/layout/add_contact_friendship_request_received.xml
@@ -6,10 +6,6 @@
     <data>
 
         <variable
-            name="clickListener"
-            type="com.naposystems.napoleonchat.ui.addContact.adapter.FriendshipRequestAdapter.ClickListener" />
-
-        <variable
             name="friendshipRequest"
             type="com.naposystems.napoleonchat.model.FriendShipRequest" />
     </data>
@@ -65,12 +61,26 @@
             app:nickname="@{friendshipRequest.contact}"
             tools:text="@tools:sample/first_names" />
 
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="@dimen/progress_friendship_request"
+            android:visibility="gone"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/textView_user_name"
+            app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname"/>
+
+
         <LinearLayout
+            android:id="@+id/containerButtons"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/x_small_margin"
             android:orientation="horizontal"
+            android:gravity="end"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/textView_user_name"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname">
 
