--- a/app/src/main/res/layout/add_contact_item.xml
+++ b/app/src/main/res/layout/add_contact_item.xml
@@ -53,6 +53,16 @@
             app:nickname="@{contact.nickname}"
             tools:text="@tools:sample/first_names" />
 
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="@dimen/progress_friendship_request"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/x_small_margin"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/button_add"
+            app:layout_constraintTop_toTopOf="@+id/button_add" />
+
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_add"
             style="@style/AppOutlinedPrimaryButtonSmall"
@@ -70,7 +80,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname"
             app:layout_constraintVertical_bias="1.0"
             app:strokeColor="@color/buttonTint" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
