--- a/app/src/main/res/layout/add_contact_request_received_item.xml
+++ b/app/src/main/res/layout/add_contact_request_received_item.xml
@@ -54,7 +54,18 @@
             app:nickname="@{contact.nickname}"
             tools:text="@tools:sample/first_names" />
 
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="@dimen/progress_friendship_request"
+            android:visibility="gone"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/textView_user_name"
+            app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname"/>
+
         <LinearLayout
+            android:id="@+id/containerButtons"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="right"
