--- a/app/src/main/res/layout/add_contact_request_received_item.xml
+++ b/app/src/main/res/layout/add_contact_request_received_item.xml
@@ -19,7 +19,6 @@
             android:id="@+id/imageView_user_image"
             style="@style/imageAvatarItem"
             app:avatar="@{contact.imageUrl}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:scaleType="fitCenter"
@@ -57,12 +56,12 @@
         <ProgressBar
             android:id="@+id/progressbar"
             android:layout_width="@dimen/progress_friendship_request"
-            android:visibility="gone"
             android:layout_height="match_parent"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/textView_user_name"
-            app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname" />
 
         <LinearLayout
             android:id="@+id/containerButtons"
@@ -77,27 +76,23 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_refuse"
-                style="@style/AppOutlinedPrimaryButtonSmall.Red"
+                style="@style/AppOutlinedPrimaryButtonSmall.Request.Red"
                 android:layout_width="wrap_content"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:paddingStart="@dimen/x_small_padding"
                 android:paddingEnd="@dimen/small_padding"
                 android:text="@string/text_refuse"
-                android:textAlignment="textStart"
-                android:textAllCaps="true"
                 app:icon="@drawable/ic_close_black_24"
                 app:iconTint="@color/red" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_accept"
-                style="@style/AppOutlinedPrimaryButtonSmall"
+                style="@style/AppOutlinedPrimaryButtonSmall.Request.Green"
                 android:layout_width="wrap_content"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:paddingStart="@dimen/x_small_padding"
                 android:paddingEnd="@dimen/small_padding"
                 android:text="@string/text_accept"
-                android:textAlignment="textStart"
-                android:textAllCaps="true"
                 app:icon="@drawable/ic_check_primary"
                 app:iconTint="@color/green" />
         </LinearLayout>
