--- a/app/src/main/res/layout/add_contact_friendship_request_received.xml
+++ b/app/src/main/res/layout/add_contact_friendship_request_received.xml
@@ -25,7 +25,6 @@
             android:layout_height="64dp"
             android:background="@drawable/border_avatar_contact"
             app:avatar="@{friendshipRequest.contact}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
@@ -86,28 +85,24 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_refuse"
-                style="@style/AppOutlinedPrimaryButtonSmall.Red"
+                style="@style/AppOutlinedPrimaryButtonSmall.Request.Red"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:paddingStart="@dimen/x_small_padding"
                 android:paddingEnd="@dimen/small_padding"
                 android:text="@string/text_refuse"
-                android:textAlignment="textStart"
-                android:textAllCaps="true"
                 app:icon="@drawable/ic_close_black_24"
                 app:iconTint="@color/red" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_accept"
-                style="@style/AppOutlinedPrimaryButtonSmall"
+                style="@style/AppOutlinedPrimaryButtonSmall.Request.Green"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:paddingStart="@dimen/x_small_padding"
                 android:paddingEnd="@dimen/small_padding"
                 android:text="@string/text_accept"
-                android:textAlignment="textStart"
-                android:textAllCaps="true"
                 app:icon="@drawable/ic_check_primary"
                 app:iconTint="@color/green" />
         </LinearLayout>
