--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -786,7 +786,23 @@
         <item name="android:textAllCaps">false</item>
         <item name="rippleColor">?attr/attrRippleColorRippleTint</item>
     </style>
-
+    <style name="AppOutlinedPrimaryButtonSmall.Request.Red" parent="AppOutlinedPrimaryButtonSmall">
+        <item name="android:textColor">?attr/attrTextColorRed</item>
+        <item name="strokeColor">?attr/attrStrokeColorRed</item>
+        <item name="rippleColor">?attr/attrRippleColorRed</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">textStart</item>
+    </style>
+    <style name="AppOutlinedPrimaryButtonSmall.Request.Green" parent="AppOutlinedPrimaryButtonSmall">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">textStart</item>
+    </style>
+    <style name="AppOutlinedPrimaryButtonSmall.Request.Yelow" parent="AppOutlinedPrimaryButtonSmall">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textColor">@color/buttonTint</item>
+        <item name="strokeColor">@color/buttonTint</item>
+    </style>
     <style name="AppOutlinedPrimaryButtonSmall.Red" parent="AppOutlinedPrimaryButtonSmall">
         <item name="android:textColor">?attr/attrTextColorRed</item>
         <item name="strokeColor">?attr/attrStrokeColorRed</item>
