initial sending of message and attachments

--- a/app/src/main/res/layout/activity_multiple_attachment_preview.xml
+++ b/app/src/main/res/layout/activity_multiple_attachment_preview.xml
@@ -44,4 +44,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_attachment_options" />
 
+    <ProgressBar
+        android:id="@+id/progress_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/view_preview_bottom"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_attachment_options" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
