--- a/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
+++ b/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
@@ -32,6 +32,7 @@
         app:layout_constraintTop_toBottomOf="@id/tab_layout_files" />
 
     <EditText
+        android:id="@+id/edit_text_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
