--- a/app/src/main/res/layout/fragment_multiple_attachment_remove_attachment_dialog.xml
+++ b/app/src/main/res/layout/fragment_multiple_attachment_remove_attachment_dialog.xml
@@ -8,7 +8,7 @@
     android:paddingTop="@dimen/large_padding"
     android:paddingEnd="@dimen/normal_padding"
     android:paddingBottom="@dimen/large_padding"
-    tools:context=".ui.previewmulti.fragments.dialog.MultipleAttachmentRemoveAttachmentDialogFragment">
+    tools:context=".ui.multipreview.fragments.dialog.MultipleAttachmentRemoveAttachmentDialogFragment">
 
     <TextView
         android:id="@+id/text_title"
