--- a/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
+++ b/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="2dp"
@@ -8,15 +9,34 @@
     android:paddingTop="@dimen/large_padding"
     android:paddingBottom="@dimen/small_margin">
 
+    <TextView
+        android:id="@+id/text_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginEnd="@dimen/small_margin"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:textAppearance="@style/SmallBodyTextView"
+        android:textColor="@color/white"
+        android:textSize="@dimen/minor_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba Este es un mensaje de prueba"
+        tools:visibility="visible" />
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_files"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginTop="@dimen/small_margin"
         android:background="@null"
         app:layout_constraintBottom_toTopOf="@id/button_send"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_message"
         app:tabIndicator="@null"
         app:tabMode="scrollable"
         app:tabRippleColor="@android:color/holo_orange_light" />
