--- a/app/src/main/res/values/multiple_attachment.xml
+++ b/app/src/main/res/values/multiple_attachment.xml
@@ -10,6 +10,8 @@
 
     <string name="multi_button_accept">Aceptar</string>
     <string name="multi_button_cancel">Cancelar</string>
+    <string name="multi_button_remove_for_me">Eliminar para mí</string>
+    <string name="multi_button_remove_for_all">Eliminar para todos</string>
     <string name="multi_button_delete_for_me">Eliminar para mí</string>
     <string name="multi_button_delete_for_all">Eliminar para todos</string>
 
