--- a/app/src/main/res/layout/fragment_time_format_dialog.xml
+++ b/app/src/main/res/layout/fragment_time_format_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/attrBackgroundColorBackgroundDialog"
-        tools:context=".ui.timeFormat.TimeFormatDialogFragment">
+        tools:context=".ui.dialog.timeFormat.TimeFormatDialogFragment">
 
         <TextView
             android:id="@+id/textView_title"
