--- a/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
+++ b/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
@@ -43,10 +43,12 @@
 
     <ImageButton
         android:id="@+id/button_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/conversation_fab_size"
+        android:layout_height="@dimen/conversation_fab_size"
         android:layout_margin="@dimen/small_margin"
+        android:background="@drawable/bg_button_send"
         android:src="@drawable/ic_send_black"
+        android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tab_layout_files" />
@@ -54,7 +56,9 @@
     <EditText
         android:id="@+id/edit_text_message"
         android:layout_width="0dp"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
+        android:maxLines="2"
         android:layout_margin="@dimen/small_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button_send"
