--- a/app/src/main/res/values-es/security_settings.xml
+++ b/app/src/main/res/values-es/security_settings.xml
@@ -8,6 +8,6 @@
     <string name="text_account_recovery_information">Recuperación de cuenta</string>
     <string name="text_allow_download_attachments">Permitir descargar adjuntos enviados</string>
     <string name="text_unlock_options">Opciones de desbloqueo</string>
-    <string name="text_message_self_destruct_time_not_send">Tiempo de autodestrucción de mensajes fallidos y no leídos</string>
+    <string name="text_message_self_destruct_time_not_send">Tiempo de autodestrucción de mensajes fallidos</string>
     <string name="text_conversation">CONVERSACIÓN</string>
 </resources>
