--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -33,7 +33,7 @@
     <color name="fabIconColor">#121212</color>
     <color name="flatActionBarColor">#282828</color>
     <color name="colorTextMyMessage">#121212</color>
-    <color name="colorTextIncomingMessage">#f2f2f2</color>
+    <color name="colorTextIncomingMessage">#121212</color>
     <color name="red">#DA5E58</color>
     <color name="redIntense">#ff5131</color>
     <color name="searchViewTextColor">#4d4d4d</color>
