--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -103,5 +103,6 @@
     <string name="text_reject">Reject</string>
     <string name="text_count_messages">Messages</string>
     <string name="text_sending_file">Sending file</string>
+    <string name="text_sending_file_multiple">Sending multiples files</string>
     <string name="text_activated">activated</string>
 </resources>
