--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -104,5 +104,9 @@
     <string name="text_count_messages">Messages</string>
     <string name="text_sending_file">Sending file</string>
     <string name="text_sending_file_multiple">Sending multiples files</string>
+
+    <string name="text_downloading_file">Donwloading files</string>
+    <string name="text_downloading_file_multiple">Donwloading multiple files</string>
+
     <string name="text_activated">activated</string>
 </resources>
